# BlackLittermanModel

./: Altman.py  ConsumerGoods.csv  EnergyIndustry.csv  IndustrialMaterials.csv  Long_Term_Consumer.csv  Long_Term_Energy.csv  Long_Term_IndustrialMaterials.csv  Long_Term_Tech.csv  README.md  Short_Term_Consumer.csv  Short_Term_Energy.csv  Short_Term_IndustrialMaterials.csv  Short_Term_Tech.csv  main.py  maxSharpe.py  pyproject.toml
