[project]
name = "blacklittermanmodel"
version = "0.1.0"
description = "Model to see expected returns from black litterman model"
authors = [
    {name = "NikhilAnisetti",email = "114839124+NikhilAnisetti@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyportfolioopt (>=1.5.6,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "yfinance (>=0.2.54,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
